Customize for vn

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/static/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Store</title>
+  <title>Tạp Hóa Cô Mai</title>
   <link rel="stylesheet" href="/static/css/font-awesome.min.css">
   <link rel="stylesheet" href="/static/css/bulma.min.css">
-<script type="module" crossorigin src="/static/assets/index.7ad9146a.js"></script>
+<script type="module" crossorigin src="/static/assets/index.134d8e6c.js"></script>
   <link rel="modulepreload" href="/static/assets/vendor.9c11db83.js">
-  <link rel="stylesheet" href="/static/assets/index.cf082cd9.css">
+  <link rel="stylesheet" href="/static/assets/index.ee2ef37d.css">
 </head>
 
 <body>
